--- a/index.css
+++ b/index.css
@@ -35,6 +35,8 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  background-color: #ededed;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 /* A elements that don't have a class get default styles */
@@ -72,4 +74,79 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap");
+
 /* end of css reset */
+
+header {
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid lightgrey;
+  background-color: #fff;
+}
+
+.top-logo {
+  max-width: 190px;
+}
+
+.avatar-top {
+  width: 45px;
+}
+
+.container {
+  max-width: 500px;
+  border: 1px solid red;
+  margin: 0 auto;
+}
+
+.feed-box {
+  margin-bottom: 2em;
+}
+
+.main-feed-img {
+  max-width: 100%;
+}
+
+.main-feed-header {
+  padding-left: 1em;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+}
+
+.main-feed-text {
+  padding: 1em;
+}
+
+.main-feed-avatar {
+  border-radius: 50%;
+  width: 50px;
+}
+
+.main-feed-text h3 {
+  margin-bottom: 0;
+}
+
+.main-feed-text p {
+  margin-top: 0;
+}
+
+.main-feed-share-icons {
+  padding: 1em;
+  display: flex;
+  gap: 1em;
+  background-color: #fff;
+}
+
+.main-feed-share-icons img {
+  width: 30px;
+}
+
+.main-feed-like-count {
+  padding-bottom: 1em;
+  padding-left: 1em;
+  background-color: #fff;
+}
